# trafficcontrol

./: .asf.yaml  .codecov.yml  .dependency_license  .env  .gitignore  .golangci.yml  .mailmap  .rat-excludes  .rat-excludes~  .readthedocs.yaml  .travis.yml  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DISCLAIMER  INSTALL.md  ISSUE_TEMPLATE.md  Jenkinsfile.apache  KEYS  LICENSE  Makefile  NOTICE  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  VERSION  Vagrantfile  atsorderedmap.go  cache.go  cacheobj.go  connmap.go  doap_Traffic_Control.rdf  docker-compose.yml  docs.go  ds descp to UI  go.mod  go.sum  grove.go  (+15 more)
.github/: main.workflow
.github/actions/assign-triage-role/: README.rst  requirements.txt  setup.cfg  setup.py
.github/actions/assign-triage-role/assign_triage_role/: __main__.py  constants.py  triage_role_assigner.py
.github/actions/assign-triage-role/assign_triage_role/templates/: apache_license.yml  pr_template.md  single_contributor.md  single_pr.md
.github/actions/assign-triage-role/tests/: test_triage_role_assigner.py
.github/actions/pr-to-update-go/: README.rst  requirements.txt  setup.cfg  setup.py  update_golang_org_x.sh
.github/actions/pr-to-update-go/pr_to_update_go/: GoPRMaker.py  __main__.py  constants.py  go_pr_maker.py  pr_template.md  update_golang_org_x.sh
.github/actions/pr-to-update-go/tests/: test_go_pr_maker.py
CameraControl/: CameraControl.js  Dockerfile  README.md  README.txt  cameras.json  package.json
CameraFeed/: .gitignore  AmcrestIPM-721S.js  CameraFeed.js  CameraFeedError.js  CameraFeed_v1.js  Dockerfile  README.md  README.txt  package.json
LiveStream/: Dockerfile  LiveStream.js  README.md  package.json
RetrieveVideo/: Dockerfile  README.md  README.txt  RetrieveVideo.js  mongo.json  package.json
android/: README  debug.apk
api/: action.go  api.go  asn.go  asn_test.go  cachegroup.go  cachegroup_parameter.go  cdn.go  deliveryservice.go  deliveryservice_regex.go  deliveryservice_server.go  deliveryservice_tmuser.go  division.go  federation.go  federation_deliveryservice.go  federation_federation_resolver.go  federation_resolver.go  federation_tmuser.go  goose_db_version.go  hwinfo.go  job.go  job_agent.go  job_result.go  job_status.go  log.go  parameter.go  phys_location.go  profile.go  profile_parameter.go  regex.go  region.go  role.go  server.go  server_byname.go  servercheck.go  staticdnsentry.go  stats_summary.go  status.go  tm_user.go  tm_user_byname.go  tmuser.go  (+2 more)
apitest/: testapi.go
auth/: .gitignore  Dockerfile  auth.go  main.go
blueprints/: BLUEPRINT_TEMPLATE.md  api.guidelines.md  cache-config-service.md  client-certificate-auth.md  tags.md  (+27 more)
(+11896 files in other folders)
