# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[metadata]
name = assign-triage-role
version = 0.0.0
description = Assigns the GitHub Triage role to non-committers who have fixed 2 Issues in the past month
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Apache Traffic Control
author_email = dev@trafficcontrol.apache.org
classifiers = OSI Approved :: Apache Software License

[options]
python_requires = >=3.11
packages = assign_triage_role
install_requires =
	PyGithub
	pyyaml

[options.entry_points]
console_scripts = assign-triage-role = assign_triage_role:main

[options.extras_require]
test = unittest

[options.package_data]
assign_triage_role =
	templates/apache_license.yml
	templates/pr_template.md
	templates/single_contributor.md
	templates/single_pr.md
