# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[metadata]
name = pr-to-update-go
version = 0.0.0
description = Opens a PR if a new minor Go revision is available.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Apache Traffic Control
author_email = dev@trafficcontrol.apache.org
classifiers = OSI Approved :: Apache Software License

[options]
python_requires = >=3.10
packages = pr_to_update_go
install_requires =
	python-dotenv
	PyGithub
	requests

[options.entry_points]
console_scripts = pr-to-update-go = pr_to_update_go:main

[options.extras_require]
test = unittest

[options.package_data]
pr_to_update_go =
	pr_template.md
	update_golang_org_x.sh
